[gd_scene load_steps=3 format=2]

[ext_resource path="res://ResponseContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://PrototypingTool.gd" type="Script" id=2]

[node name="PrototypingTool" type="Node2D"]
position = Vector2( 0, 5.65685 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Screen" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseContainer" parent="CanvasLayer/Screen" instance=ExtResource( 1 )]

[node name="BackButton" type="Button" parent="CanvasLayer/Screen"]
margin_left = 8.45343
margin_top = 11.6235
margin_right = 79.4534
margin_bottom = 46.6235
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserOverride" type="Label" parent="CanvasLayer"]
margin_left = 481.392
margin_top = 547.359
margin_right = 548.392
margin_bottom = 578.359
custom_colors/font_color = Color( 1, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
